--- a/drawing/src/main/res/layout/activity_main.xml
+++ b/drawing/src/main/res/layout/activity_main.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity"
->
+    xmlns:android = "http://schemas.android.com/apk/res/android"
+    xmlns:app = "http://schemas.android.com/apk/res-auto"
+    xmlns:tools = "http://schemas.android.com/tools"
+    android:layout_width = "match_parent"
+    android:layout_height = "match_parent"
+    tools:context = ".MainActivity"
+    >
 
-    <com.hsicen.drawing.view.PieChart
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="16dp"
-    />
+    <com.hsicen.drawing.view.AvatarView
+        android:layout_width = "80dp"
+        android:layout_height = "80dp"
+        android:layout_margin = "16dp"
+        android:padding = "3dp"
+        android:src = "@mipmap/ic_launcher"
+        app:layout_constraintLeft_toLeftOf = "parent"
+        app:layout_constraintTop_toTopOf = "parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
