--- a/drawing/src/main/res/layout/activity_main.xml
+++ b/drawing/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
         tools:context=".MainActivity"
 >
 
-    <com.hsicen.drawing.view.ImageText
+    <com.hsicen.drawing.view.CameraView
             android:background="#2b2b2b"
             android:id="@+id/sportView"
             android:layout_width="wrap_content"
