--- a/drawable/src/main/res/layout/activity_main.xml
+++ b/drawable/src/main/res/layout/activity_main.xml
@@ -6,16 +6,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity"
->
+        >
 
     <com.hsicen.drawable.DrawableView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:background="@color/colorPrimary"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-    />
+            />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
