--- a/animator/src/main/res/layout/activity_main.xml
+++ b/animator/src/main/res/layout/activity_main.xml
@@ -6,21 +6,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity"
->
+        >
 
     <com.hsicen.animator.CameraView
             android:id="@+id/cameraView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-    />
+            android:visibility="gone"
+            />
 
     <Button
             android:id="@+id/btnStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="开始"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-    />
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+    <com.hsicen.animator.MaterialEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Username"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
