--- a/layout/src/main/res/layout/activity_main.xml
+++ b/layout/src/main/res/layout/activity_main.xml
@@ -7,11 +7,13 @@
 	android:orientation = "vertical">
 
 	<com.hsicen.layout.TagLayout
+		android:id = "@+id/tagLayout"
 		android:layout_width = "match_parent"
 		android:layout_height = "wrap_content"
 		tools:context = ".MainActivity">
 
 		<com.hsicen.layout.ColorTextView
+			android:id = "@+id/tagView"
 			android:layout_width = "wrap_content"
 			android:layout_height = "wrap_content"
 			android:layout_margin = "5dp"
