双指缩放逻辑处理

--- a/scalableimageview/src/main/res/layout/activity_main.xml
+++ b/scalableimageview/src/main/res/layout/activity_main.xml
@@ -12,4 +12,4 @@
 		android:layout_height = "match_parent"
 		app:src = "@drawable/avatar_rengwuxian" />
 
-</LinearLayout>ObjectAnimator.ofFloat(this, "mFraction", 0f, 1f)
+</LinearLayout>
