添加多点触控演示效果，独立完整写出多点触控算法

--- a/multitouch/src/main/res/layout/activity_main.xml
+++ b/multitouch/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
 	android:layout_height = "match_parent"
 	tools:context = ".MainActivity">
 
-	<com.hsicen.multitouch.MultiTouchView
+	<com.hsicen.multitouch.MultiTouchTestView
 		android:layout_width = "match_parent"
 		android:layout_height = "match_parent"
 		app:layout_constraintBottom_toBottomOf = "parent"
