--- a/19_constraintlayout/src/main/res/values/styles.xml
+++ b/19_constraintlayout/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
 		<item name = "colorAccent">@color/colorAccent</item>
 	</style>
 
+	<style name = "NoTitle" parent = "AppTheme">
+		<item name = "windowNoTitle">true</item>
+		<item name = "windowActionBar">false</item>
+	</style>
+
 </resources>
