使用MotionLayout实现弹出式菜单动画

--- a/20_motionlayout/src/main/res/xml/activity_menu_scene.xml
+++ b/20_motionlayout/src/main/res/xml/activity_menu_scene.xml
@@ -8,10 +8,10 @@
 	<Transition
 		app:constraintSetEnd = "@layout/activity_menu_end"
 		app:constraintSetStart = "@layout/activity_menu_start"
-		app:duration = "2000">
+		app:duration = "800">
 
 		<OnClick
-			app:clickAction = "transitionToEnd"
+			app:clickAction = "toggle"
 			app:targetId = "@id/ivMenu" />
 
 	</Transition>
