--- a/20_motionlayout/src/main/res/layout/activity_menu_end.xml
+++ b/20_motionlayout/src/main/res/layout/activity_menu_end.xml
@@ -12,13 +12,13 @@
 
 	<ImageView
 		android:id = "@+id/ivMenu"
-		android:layout_width = "wrap_content"
-		android:layout_height = "wrap_content"
-		android:layout_margin = "32dp"
-		android:scaleType = "fitXY"
+		android:layout_width = "48dp"
+		android:layout_height = "48dp"
 		android:src = "@android:drawable/ic_menu_add"
 		app:layout_constraintBottom_toBottomOf = "parent"
+		app:layout_constraintLeft_toLeftOf = "parent"
 		app:layout_constraintRight_toRightOf = "parent"
+		app:layout_constraintTop_toTopOf = "parent"
 		tools:ignore = "ContentDescription" />
 
 	<ImageView
