--- a/20_motionlayout/src/main/res/layout/activity_menu_start.xml
+++ b/20_motionlayout/src/main/res/layout/activity_menu_start.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.constraintlayout.motion.widget.MotionLayout
 	xmlns:android = "http://schemas.android.com/apk/res/android"
 	xmlns:app = "http://schemas.android.com/apk/res-auto"
 	xmlns:tools = "http://schemas.android.com/tools"
@@ -12,13 +12,13 @@
 
 	<ImageView
 		android:id = "@+id/ivMenu"
-		android:layout_width = "wrap_content"
-		android:layout_height = "wrap_content"
-		android:layout_margin = "32dp"
-		android:scaleType = "fitXY"
+		android:layout_width = "48dp"
+		android:layout_height = "48dp"
 		android:src = "@android:drawable/ic_menu_add"
 		app:layout_constraintBottom_toBottomOf = "parent"
+		app:layout_constraintLeft_toLeftOf = "parent"
 		app:layout_constraintRight_toRightOf = "parent"
+		app:layout_constraintTop_toTopOf = "parent"
 		tools:ignore = "ContentDescription" />
 
 	<ImageView
@@ -51,4 +51,4 @@
 		app:layout_constraintCircleAngle = "315"
 		app:layout_constraintCircleRadius = "0dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.motion.widget.MotionLayout>
