--- a/20_motionlayout/src/main/res/layout/activity_scene_start.xml
+++ b/20_motionlayout/src/main/res/layout/activity_scene_start.xml
@@ -39,36 +39,39 @@
 		app:layout_constraintVertical_bias = "0.2"
 		app:srcCompat = "@mipmap/ic_launcher" />
 
+	<androidx.constraintlayout.helper.widget.Flow
+		android:id = "@+id/flow"
+		android:layout_width = "wrap_content"
+		android:layout_height = "wrap_content"
+		android:orientation = "horizontal"
+		app:constraint_referenced_ids = "btnStart,btnEnd,btnMenu,btnConstraint"
+		app:flow_wrapMode = "aligned"
+		app:layout_constraintBottom_toBottomOf = "parent"
+		app:layout_constraintLeft_toLeftOf = "parent"
+		app:layout_constraintRight_toRightOf = "parent" />
 
 	<Button
 		android:id = "@+id/btnStart"
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
-		android:layout_margin = "16dp"
-		android:text = "Start Scene"
-		app:layout_constraintBottom_toBottomOf = "parent"
-		app:layout_constraintHorizontal_chainStyle = "packed"
-		app:layout_constraintLeft_toLeftOf = "parent"
-		app:layout_constraintRight_toLeftOf = "@+id/btnEnd" />
+		android:text = "Start Scene" />
 
 	<Button
 		android:id = "@+id/btnEnd"
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
-		android:layout_margin = "16dp"
-		android:text = "End Scene"
-		app:layout_constraintBottom_toBottomOf = "parent"
-		app:layout_constraintLeft_toRightOf = "@+id/btnStart"
-		app:layout_constraintRight_toLeftOf = "@id/btnMenu" />
+		android:text = "End Scene" />
 
 	<Button
 		android:id = "@+id/btnMenu"
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
-		android:layout_margin = "16dp"
-		android:text = "菜单"
-		app:layout_constraintBottom_toBottomOf = "parent"
-		app:layout_constraintLeft_toRightOf = "@id/btnEnd"
-		app:layout_constraintRight_toRightOf = "parent" />
+		android:text = "菜单" />
+
+	<Button
+		android:id = "@+id/btnConstraint"
+		android:layout_width = "wrap_content"
+		android:layout_height = "wrap_content"
+		android:text = "场景约束" />
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
