使用Motion Layout实现卡片分发效果

--- a/20_motionlayout/src/main/res/layout/activity_scene_start.xml
+++ b/20_motionlayout/src/main/res/layout/activity_scene_start.xml
@@ -44,7 +44,7 @@
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
 		android:orientation = "horizontal"
-		app:constraint_referenced_ids = "btnStart,btnEnd,btnMenu,btnConstraint"
+		app:constraint_referenced_ids = "btnStart,btnEnd,btnMenu,btnConstraint,btnFly"
 		app:flow_wrapMode = "aligned"
 		app:layout_constraintBottom_toBottomOf = "parent"
 		app:layout_constraintLeft_toLeftOf = "parent"
@@ -73,5 +73,11 @@
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
 		android:text = "场景约束" />
+
+	<Button
+		android:id = "@+id/btnFly"
+		android:layout_width = "wrap_content"
+		android:layout_height = "wrap_content"
+		android:text = "飞翔的卡片" />
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
