--- a/20_motionlayout/src/main/res/layout/activity_card_fly.xml
+++ b/20_motionlayout/src/main/res/layout/activity_card_fly.xml
@@ -6,6 +6,7 @@
 	android:layout_width = "match_parent"
 	android:layout_height = "match_parent"
 	app:layoutDescription = "@xml/motion_flycard_scene"
+	app:showPaths = "true"
 	tools:context = ".CardFlyActivity">
 
 	<View
