--- a/20_motionlayout/src/main/res/xml/motion_flycard_scene.xml
+++ b/20_motionlayout/src/main/res/xml/motion_flycard_scene.xml
@@ -223,6 +223,10 @@
 				app:layout_constraintRight_toRightOf = "parent"
 				app:layout_constraintTop_toTopOf = "parent" />
 
+			<PropertySet
+				android:alpha = "0.3"
+				android:visibility = "visible" />
+
 		</Constraint>
 
 		<Constraint
