--- a/21_multitouch/src/main/res/layout/activity_main.xml
+++ b/21_multitouch/src/main/res/layout/activity_main.xml
@@ -7,12 +7,11 @@
 	android:layout_height = "match_parent"
 	tools:context = ".MainActivity">
 
-	<com.hsicen.multitouch.MultiTouchView
+	<!--  多点触控-->
+	<com.example.a21_multitouch.view.MultiTouchView
 		android:layout_width = "match_parent"
 		android:layout_height = "match_parent"
-		app:layout_constraintBottom_toBottomOf = "parent"
 		app:layout_constraintLeft_toLeftOf = "parent"
-		app:layout_constraintRight_toRightOf = "parent"
 		app:layout_constraintTop_toTopOf = "parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
