--- a/21_multitouch/src/main/res/layout/activity_main.xml
+++ b/21_multitouch/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 	tools:context = ".MainActivity">
 
 	<!--  多点触控-->
-	<com.example.a21_multitouch.view.MultiTouchView
+	<com.example.a21_multitouch.view.MultiTouchView2
 		android:layout_width = "match_parent"
 		android:layout_height = "match_parent"
 		app:layout_constraintLeft_toLeftOf = "parent"
