--- a/21_drag_nestedscroll/src/main/res/layout/activity_main.xml
+++ b/21_drag_nestedscroll/src/main/res/layout/activity_main.xml
@@ -1,19 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<com.hsicen.a21_drag_nestedscroll.drag.DragListenerGridView
 	xmlns:android = "http://schemas.android.com/apk/res/android"
-	xmlns:app = "http://schemas.android.com/apk/res-auto"
 	xmlns:tools = "http://schemas.android.com/tools"
 	android:layout_width = "match_parent"
 	android:layout_height = "match_parent"
 	tools:context = ".MainActivity">
 
-	<TextView
+	<View
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
-		android:text = "Hello World!"
-		app:layout_constraintBottom_toBottomOf = "parent"
-		app:layout_constraintLeft_toLeftOf = "parent"
-		app:layout_constraintRight_toRightOf = "parent"
-		app:layout_constraintTop_toTopOf = "parent" />
+		android:background = "#2962FF" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+	<View
+		android:layout_width = "wrap_content"
+		android:layout_height = "wrap_content"
+		android:background = "#396E76" />
+
+	<View
+		android:layout_width = "wrap_content"
+		android:layout_height = "wrap_content"
+		android:background = "#AA00FF" />
+
+	<View
+		android:layout_width = "wrap_content"
+		android:layout_height = "wrap_content"
+		android:background = "#6200EA" />
+
+	<View
+		android:layout_width = "wrap_content"
+		android:layout_height = "wrap_content"
+		android:background = "#00C853" />
+
+	<View
+		android:layout_width = "wrap_content"
+		android:layout_height = "wrap_content"
+		android:background = "#FFAB00" />
+
+</com.hsicen.a21_drag_nestedscroll.drag.DragListenerGridView>
