--- a/21_drag_nestedscroll/src/main/res/layout/activity_main.xml
+++ b/21_drag_nestedscroll/src/main/res/layout/activity_main.xml
@@ -6,34 +6,43 @@
 	android:layout_height = "match_parent"
 	tools:context = ".MainActivity">
 
-	<View
-		android:layout_width = "wrap_content"
-		android:layout_height = "wrap_content"
-		android:background = "#2962FF" />
+	<TextView
+		android:id = "@+id/view1"
+		android:layout_width = "match_parent"
+		android:layout_height = "match_parent"
+		android:background = "#2962FF"
+		android:gravity = "center"
+		android:text = "DragListener  列表"
+		android:textColor = "@color/colorAccent" />
 
 	<View
+		android:id = "@+id/view2"
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
 		android:background = "#396E76" />
 
 	<View
+		android:id = "@+id/view3"
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
 		android:background = "#AA00FF" />
 
 	<View
+		android:id = "@+id/view4"
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
 		android:background = "#6200EA" />
 
 	<View
+		android:id = "@+id/view5"
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
 		android:background = "#00C853" />
 
 	<View
-		android:layout_width = "wrap_content"
-		android:layout_height = "wrap_content"
-		android:background = "#FFAB00" />
+		android:id = "@+id/view6"
+		android:layout_width = "match_parent"
+		android:layout_height = "match_parent"
+		android:background = "#FF6D00" />
 
 </com.hsicen.a21_drag_nestedscroll.drag.DragListenerGridView>
