--- a/17_recyclerviewcore/src/main/res/layout/activity_main.xml
+++ b/17_recyclerviewcore/src/main/res/layout/activity_main.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-	xmlns:android = "http://schemas.android.com/apk/res/android"
-	xmlns:app = "http://schemas.android.com/apk/res-auto"
-	xmlns:tools = "http://schemas.android.com/tools"
-	android:layout_width = "match_parent"
-	android:layout_height = "match_parent"
-	android:background = "#282A33"
-	tools:context = ".MainActivity">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#282A33"
+    tools:context=".MainActivity">
 
-	<androidx.recyclerview.widget.RecyclerView
-		android:id = "@+id/rvFruit"
-		android:layout_width = "match_parent"
-		android:layout_height = "match_parent"
-		app:layoutManager = "androidx.recyclerview.widget.LinearLayoutManager"
-		tools:itemCount = "3"
-		tools:listitem = "@layout/item_rv_apple" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvFruit"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:itemCount="3"
+        tools:listitem="@layout/item_rv_apple" />
+
+    <com.hsicen.recyclerviewcore.MoveView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:background="@color/colorAccent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
