--- a/17_recyclerviewcore/src/main/res/layout/item_rv_apple.xml
+++ b/17_recyclerviewcore/src/main/res/layout/item_rv_apple.xml
@@ -1,73 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
-	xmlns:android = "http://schemas.android.com/apk/res/android"
-	xmlns:app = "http://schemas.android.com/apk/res-auto"
-	android:layout_width = "match_parent"
-	android:layout_height = "wrap_content"
-	android:layout_gravity = "center_vertical"
-	android:layout_marginLeft = "16dp"
-	android:layout_marginTop = "16dp"
-	android:layout_marginRight = "16dp"
-	android:elevation = "2dp"
-	android:orientation = "vertical"
-	app:cardBackgroundColor = "#363F4C"
-	app:cardCornerRadius = "5dp"
-	app:cardElevation = "2dp">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical"
+    android:layout_marginLeft="16dp"
+    android:layout_marginTop="16dp"
+    android:layout_marginRight="16dp"
+    android:orientation="vertical"
+    android:translationZ="5dp"
+    app:cardBackgroundColor="#363F4C"
+    app:cardCornerRadius="5dp"
+    tools:showIn="@layout/activity_main">
 
-	<androidx.constraintlayout.widget.ConstraintLayout
-		android:layout_width = "match_parent"
-		android:layout_height = "wrap_content">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-		<TextView
-			android:id = "@+id/tvEdition"
-			android:layout_width = "wrap_content"
-			android:layout_height = "24dp"
-			android:layout_marginStart = "15dp"
-			android:layout_marginTop = "14dp"
-			android:gravity = "center_vertical"
-			android:text = "第20190606期"
-			android:textColor = "#FFFFFF"
-			android:textSize = "13sp"
-			app:layout_constraintLeft_toLeftOf = "parent"
-			app:layout_constraintTop_toTopOf = "parent" />
+        <TextView
+            android:id="@+id/tvEdition"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="14dp"
+            android:gravity="center_vertical"
+            android:text="第20190606期"
+            android:textColor="#FFFFFF"
+            android:textSize="13sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-		<TextView
-			android:layout_width = "wrap_content"
-			android:layout_height = "wrap_content"
-			android:layout_marginTop = "20dp"
-			android:layout_marginEnd = "15dp"
-			android:text = "中奖号码：CF846517"
-			android:textColor = "#FF8F00"
-			android:textSize = "13sp"
-			app:layout_constraintRight_toRightOf = "parent"
-			app:layout_constraintTop_toTopOf = "parent" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="15dp"
+            android:text="中奖号码：CF846517"
+            android:textColor="#FF8F00"
+            android:textSize="13sp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-		<TextView
-			android:id = "@+id/tvContent"
-			android:layout_width = "match_parent"
-			android:layout_height = "wrap_content"
-			android:layout_marginStart = "15dp"
-			android:layout_marginTop = "14dp"
-			android:layout_marginEnd = "15dp"
-			android:text = "导航支架横梁 手机安装扩展支架骑行改装件 650MT导航支架横梁 手机安装扩展支架"
-			android:textColor = "@android:color/white"
-			android:textSize = "15sp"
-			app:layout_constraintLeft_toLeftOf = "parent"
-			app:layout_constraintTop_toBottomOf = "@id/tvEdition" />
+        <TextView
+            android:id="@+id/tvContent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginEnd="15dp"
+            android:text="导航支架横梁 手机安装扩展支架骑行改装件 650MT导航支架横梁 手机安装扩展支架"
+            android:textColor="@android:color/white"
+            android:textSize="15sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvEdition" />
 
-		<TextView
-			android:layout_width = "match_parent"
-			android:layout_height = "wrap_content"
-			android:layout_marginStart = "15dp"
-			android:layout_marginTop = "9dp"
-			android:layout_marginBottom = "14dp"
-			android:text = "开奖时间：2019-02-03 12:00"
-			android:textColor = "#99FFFFFF"
-			android:textSize = "12sp"
-			app:layout_constraintBottom_toBottomOf = "parent"
-			app:layout_constraintLeft_toLeftOf = "parent"
-			app:layout_constraintTop_toBottomOf = "@id/tvContent" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="9dp"
+            android:layout_marginBottom="14dp"
+            android:text="开奖时间：2019-02-03 12:00"
+            android:textColor="#99FFFFFF"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvContent" />
 
-	</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
