--- a/10_drawing/src/main/res/layout/activity_main.xml
+++ b/10_drawing/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />-->
 
-    <com.hsicen.drawing.view.ImageText
+    <com.hsicen.drawing.view.CameraView
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
